[FIX] Container gap increased in event details page

--- a/src/sass/partials/layouts/_events.scss
+++ b/src/sass/partials/layouts/_events.scss
@@ -38,11 +38,10 @@
       display: flex;
       flex-direction: column;
       height: 100%;
-      width: 100%;
+      padding: 2px 10px 10px 5px;
       z-index: 1;
 
       .card-header-text {
-        width: 100%;
         text-align: center;
         font-size: 1.06em;
         color: #474747;
@@ -84,7 +83,7 @@
 .event-page {
   display: flex;
   flex-direction: column;
-  width: 70%;
+  width: 100%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   background-color: white;
 
